--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -207,9 +207,14 @@
              hibernate-annotations.jar depends on it -->
 		<merge src="$svndir/server/lib/lucene-core-1.9.1.jar"
 			   dest="lib/lucene-core-1.9.1.jar"/>
-		<merge src="$svndir/server/target/classes/dumbhippo.ear"
+		<merge src="$svndir/server/target/deploy/dumbhippo.ear"
 			   dest="deploy/dumbhippo.ear"
 			   hot="yes"/>
+		<!-- uncomment this if splitting the war from the ear -->
+	    <!--
+		<merge src="$svndir/server/target/deploy/dumbhippo.war"
+			   dest="deploy/dumbhippo.war"
+			   hot="yes"/> -->
 
 		<targetAttributes pattern="/data/files"	 ignore="yes" preserve="yes"/>
 		<targetAttributes pattern="/data/index"	 ignore="yes" preserve="yes"/>
