Move output dir from eclipse-bin to a linked folder eclipse-build pointing to a variable called ECLIPSE_BUILD_DIR. This allows putting the output dir on a local disk if using the project over samba or something.

--- a/dumbhippo/trunk/.project
+++ b/dumbhippo/trunk/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>eclipse-build</name>
+			<type>2</type>
+			<location>ECLIPSE_BUILD_DIR</location>
+		</link>
+	</linkedResources>
 </projectDescription>
