--- a/dumbhippo/trunk/.classpath
+++ b/dumbhippo/trunk/.classpath
@@ -84,5 +84,5 @@
 	<classpathentry kind="lib" path="server/lib/jdom-1.0.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/client/javax.servlet.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/ejb3.deployer/jboss-annotations-ejb3.jar"/>
-	<classpathentry kind="output" path="eclipse-bin"/>
+	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
