- fix bug where on hot update, we recursively re-copied all files in each directory in the hot update list - fix bug where we put empty string '' in the hot update list - add targetAttribute for hot_update_last, which moves a file to the end of the hot update list so application.xml can be touched last

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -210,6 +210,9 @@
 		<merge src="$svndir/server/target/deploy/dumbhippo.ear"
 			   dest="deploy/dumbhippo.ear"
 			   hot="yes"/>
+                <targetAttributes
+			   pattern="/deploy/dumbhippo.ear/META-INF/application.xml"
+                           hot_update_last="yes"/>
 		<!-- uncomment this if splitting the war from the ear -->
 	    <!--
 		<merge src="$svndir/server/target/deploy/dumbhippo.war"
