--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -16,6 +16,10 @@ mugshot_SOURCES	=				\
 	src/hippo-bubble-manager.h		\
 	src/hippo-bubble-util.c			\
 	src/hippo-bubble-util.h			\
+	src/hippo-canvas.c			\
+	src/hippo-canvas.h			\
+	src/hippo-canvas-shape.c		\
+	src/hippo-canvas-shape.h		\
 	src/hippo-chat-window.c		    	\
 	src/hippo-chat-window.h		    	\
 	src/hippo-cookies-linux.c		\
