Branch with changes for clustering/scalability work.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -4,6 +4,9 @@
 		 this in your ~/.super.conf -->
 	<parameter name="serverHost">localhost.localdomain</parameter>
 
+	<!-- Whether or not this instance runs as a JBoss cluster "slave" node -->
+	<parameter name="slaveMode">no</parameter>
+
 	<!-- you definitely need to change this if you're virtualizing -->
 	<parameter name="tomcatHttpPort">8080</parameter>
 
@@ -170,6 +173,8 @@
 		<parameter name="jbossdir">/opt/jboss</parameter>
 		<parameter name="targetdir">$basedir/jboss</parameter>
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
+
+		<parameter name="jbossBind">all</parameter>
 
 		<parameter name="jrmpRmiPort">$((baseport+11))</parameter>
 		<parameter name="jdwpPort">$((baseport+12))</parameter>
