tools/bind-addresses.sh: Add a script to bind IP aliases build.xml tools/deploy-stop.sh: Add ant deploy-stop tools/setup-fake-cluster.sh: Improve prompting

--- a/dumbhippo/branches/cluster/build.xml
+++ b/dumbhippo/branches/cluster/build.xml
@@ -29,6 +29,12 @@
 		</exec>
     </target>
 
+    <target name="deploy-stop">
+		<exec dir="${basedir}" executable="${basedir}/tools/deploy-stop.sh">
+			<arg value="${deploy.hosts}"/>
+		</exec>
+    </target>
+
     <target name="clean">
 		<ant dir="server" target="clean"/>
     	<ant dir="taste" target="clean"/>
