--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -22,6 +22,8 @@ mugshot_SOURCES	=				\
 	src/hippo-canvas-box.h			\
 	src/hippo-canvas-context.c		\
 	src/hippo-canvas-context.h		\
+	src/hippo-canvas-image.c		\
+	src/hippo-canvas-image.h		\
 	src/hippo-canvas-item.c			\
 	src/hippo-canvas-item.h			\
 	src/hippo-canvas-shape.c		\
