--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -18,6 +18,8 @@ mugshot_SOURCES	=				\
 	src/hippo-bubble-util.h			\
 	src/hippo-canvas.c			\
 	src/hippo-canvas.h			\
+	src/hippo-canvas-block.c		\
+	src/hippo-canvas-block.h		\
 	src/hippo-canvas-box.c			\
 	src/hippo-canvas-box.h			\
 	src/hippo-canvas-context.c		\
@@ -30,6 +32,8 @@ mugshot_SOURCES	=				\
 	src/hippo-canvas-link.h			\
 	src/hippo-canvas-shape.c		\
 	src/hippo-canvas-shape.h		\
+	src/hippo-canvas-stack.c		\
+	src/hippo-canvas-stack.h		\
 	src/hippo-canvas-text.c			\
 	src/hippo-canvas-text.h			\
 	src/hippo-chat-window.c		    	\
