.project: Rename the project to the branch name super/base.conf super/jive/files/scripts/jboss-{start,status}.sh: Add a super  parameter which is twiddle with all the right options. tools/setup-fake-cluster.sh: Set jnpHost for the clustered config. wildfire/src/java/com/dumbhippo/jive/jmx/XMPPService{,MBean}.java: Add  an MBean so that we can make Jive a JBoss SAR wildfire/src/java/org/jivesoftware/wildfire/XMPPServer.java: Allow passing  a home directory to the constructor. wildfire/src/java/org/jivesoftware/util/Log.java: Comment out redirection  of java.util.logging super.base.conf super/jive/files/scripts/jive-{start,stop}.sh  super/jive/files/deploy: Run jive as a SAR inside JBoss.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -47,8 +47,13 @@
 	<!-- The log level for the root logger (anything not covered by a more specific logger)-->
 	<parameter name="rootLogLevel">INFO</parameter>
 
+	<parameter name="jbossdir">/opt/jboss</parameter>
 	<!-- note, default is 3873 -->
 	<parameter name="jbossInvokerLocatorPort">$((baseport+50))</parameter>
+
+	<parameter name="jnpPort">$((baseport+10))</parameter>
+	<parameter name="jnpHost">localhost</parameter>
+    <parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$jnpHost:$jnpPort</parameter> 
 
 	<parameter name="basedir">$home/dhdeploy</parameter>
 	<parameter name="baseport">21000</parameter>
@@ -93,8 +98,6 @@
 
 	<!-- for 'super watch' we sometimes want to play sounds -->
 	<parameter name="playSoundCommand">/usr/bin/play %s</parameter>
-
-	<parameter name="jnpPort">$((baseport+10))</parameter>
 
 	<parameter name="jiveHost">127.0.0.1</parameter>
 	<parameter name="jivePlainPort">$((baseport+20))</parameter>	
@@ -260,6 +263,8 @@
 			   exclude="$superdir/jive/jive.exclude"/>
 		<merge src="$superdir/jive/files"
 			   expand="yes"/>
+		<merge src="$jivedir/lib/wildfire.jar"
+			   dest="deploy/wildfire.sar/wildfire.jar"/>
 		<merge src="$jivedir/plugins/hippo.jar"
 			   dest="plugins/hippo.jar"/>
 
