--- a/dumbhippo/branches/production/super/base.conf
+++ b/dumbhippo/branches/production/super/base.conf
@@ -107,6 +107,9 @@
 	<!-- you have to create an Amazon web services account and put the key here -->
 	<parameter name="amazonAccessKeyId"></parameter>
 	
+	<!-- if you participate in the Amazon affiliate program, optionally put your affiliate tag here -->
+	<parameter name="amazonAssociateTag"></parameter>	
+	
 	<!-- you must specify a Yahoo! web services application ID here -->
 	<parameter name="yahooAppId">dumbhippo</parameter>
 
