--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -177,6 +177,8 @@
 		<parameter name="targetdir">$basedir/jboss</parameter>
 		<parameter name="filesavedir">$targetdir/data/files</parameter>
 
+		<parameter name="jbossClusterEnabled">no</parameter>
+		<parameter name="jbossPartition">default</parameter>
 		<parameter name="jbossBind">all</parameter>
 
 		<parameter name="jrmpRmiPort">$((baseport+11))</parameter>
@@ -185,6 +187,8 @@
 		<parameter name="jrmiObjectPort">$((baseport+14))</parameter>
 		<parameter name="jinvokerPort">$((baseport+15))</parameter>
 		<parameter name="jbossOilInvocationLayerPort">$((baseport+16))</parameter>
+                <parameter name="hajndiPort">$((baseport+17))</parameter>
+                <parameter name="hajndiRmiPort">$((baseport+18))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
