--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -48,16 +48,22 @@ mugshot_SOURCES	=				\
 	src/hippo-embedded-image.h		\
 	src/hippo-http.c			\
 	src/hippo-http.h			\
-	src/hippo-idle.c                \
-	src/hippo-idle.h                \
+	src/hippo-idle.c                	\
+	src/hippo-idle.h                	\
 	src/hippo-image-cache.c			\
 	src/hippo-image-cache.h			\
 	src/hippo-person-renderer.c		\
 	src/hippo-person-renderer.h		\
 	src/hippo-platform-impl.c		\
 	src/hippo-platform-impl.h		\
+	src/hippo-stack-manager.c		\
+	src/hippo-stack-manager.h		\
 	src/hippo-status-icon.c			\
 	src/hippo-status-icon.h			\
+	src/hippo-window.c			\
+	src/hippo-window.h			\
+	src/hippo-window-gtk.c			\
+	src/hippo-window-gtk.h			\
 	src/main.c				\
 	src/main.h
 
