- add com.dumbhippo.dav package and WebDavServlet with simple read-only dav implementation   (currently connected to fake data) - move SAXParserFactory hoop-jumping into EnumSaxHandler - add variants to XmlBuilder that take an enum value instead of a string for element names - fix XmlBuilder.toString() odd wrongness (for loop as the array changed) - add StringUtils.urlDecode() - in RewriteServlet, properly bounce weird http methods such as dav methods

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -145,6 +145,7 @@
 				<include name="**/recommender/*.class" />
 				<include name="**/postinfo/*.class" />
 				<include name="**/services/*.class" />
+				<include name="**/dav/*.class" />
 				<include name="**/storage/*.class" />
 				<include name="**/server/**/*.class" />
 				<include name="**/server/**/*.properties" />
