--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -52,8 +52,8 @@
 	<parameter name="jbossInvokerLocatorPort">$((baseport+50))</parameter>
 
 	<parameter name="jnpPort">$((baseport+10))</parameter>
-	<parameter name="jnpHost">localhost</parameter>
-    <parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$jnpHost:$jnpPort</parameter> 
+	<parameter name="bindHost">127.0.0.1</parameter>
+    <parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$bindHost:$jnpPort</parameter> 
 
 	<parameter name="basedir">$home/dhdeploy</parameter>
 	<parameter name="baseport">21000</parameter>
@@ -179,7 +179,6 @@
 
 		<parameter name="jbossClusterEnabled">no</parameter>
 		<parameter name="jbossPartition">default</parameter>
-		<parameter name="jbossBind">all</parameter>
 
 		<parameter name="jrmpRmiPort">$((baseport+11))</parameter>
 		<parameter name="jdwpPort">$((baseport+12))</parameter>
@@ -255,6 +254,8 @@
 
 		<parameter name="targetdir">$basedir/jive</parameter>
 		<parameter name="jivedir">$svndir/wildfire/target</parameter>
+		<parameter name="dbpath">$targetdir/jive.db</parameter>
+		<parameter name="dbpassword">dummypw</parameter>
 
 		<parameter name="jiveSecurePort">$((baseport+21))</parameter>
 		<parameter name="jiveServerPort">$((baseport+22))</parameter>
