Use SQL files in dar instead of source ones. Include hsqldb.jar.
Be sure to shutdown db after setting properties.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -266,6 +266,8 @@
 	
 		<merge src="$jivedir"
 			   exclude="$superdir/jive/jive.exclude"/>
+		<merge src="$jivedir/lib/hsqldb.jar"
+			   dest="resources/hsqldb.jar"/> 
 		<merge src="$superdir/jive/files"
 			   expand="yes"/>
 		<merge src="$jivedir/lib/wildfire.jar"
