Use hsqldb.jar from JBoss, not Jive, per Owen's suggestion.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -53,7 +53,8 @@
 
 	<parameter name="jnpPort">$((baseport+10))</parameter>
 	<parameter name="bindHost">127.0.0.1</parameter>
-    <parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$bindHost:$jnpPort</parameter> 
+	<parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$bindHost:$jnpPort</parameter> 
+	<parameter name="jbossLibs">$jbossdir/server/default/lib</parameter>
 
 	<parameter name="basedir">$home/dhdeploy</parameter>
 	<parameter name="baseport">21000</parameter>
@@ -266,8 +267,6 @@
 	
 		<merge src="$jivedir"
 			   exclude="$superdir/jive/jive.exclude"/>
-		<merge src="$jivedir/lib/hsqldb.jar"
-			   dest="resources/hsqldb.jar"/> 
 		<merge src="$superdir/jive/files"
 			   expand="yes"/>
 		<merge src="$jivedir/lib/wildfire.jar"
