Convert to using JBoss TreeCache for 2nd level caching.

--- a/dumbhippo/branches/cluster/.classpath
+++ b/dumbhippo/branches/cluster/.classpath
@@ -84,5 +84,6 @@
 	<classpathentry kind="lib" path="server/lib/jdom-1.0.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/client/javax.servlet.jar"/>
 	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/ejb3.deployer/jboss-annotations-ejb3.jar"/>
+	<classpathentry kind="lib" path="/opt/jboss/server/all/lib/jboss-cache.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
