--- a/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
+++ b/dumbhippo/branches/cluster/super/jboss/files/deploy/ejb3.deployer/META-INF/persistence.properties
@@ -5,10 +5,10 @@ hibernate.transaction.auto_close_session=false
 hibernate.query.factory_class=org.hibernate.hql.ast.ASTQueryTranslatorFactory
 hibernate.hbm2ddl.auto=create-drop
 #hibernate.hbm2ddl.auto=create
-hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
-# Clustered cache with TreeCache
-#hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
-#hibernate.treecache.mbean.object_name=jboss.cache:service=EJB3EntityTreeCache
+#hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
+ Clustered cache with TreeCache
+hibernate.cache.provider_class=org.jboss.ejb3.entity.TreeCacheProviderHook
+hibernate.treecache.mbean.object_name=jboss.cache:service=EJB3EntityTreeCache
 hibernate.connection.datasource=java:/DefaultDS
 hibernate.jndi.java.naming.factory.initial=org.jnp.interfaces.NamingContextFactory
 hibernate.jndi.java.naming.factory.url.pkgs=org.jboss.naming:org.jnp.interfaces
