Add multicastAddress ~/.super.conf parameter, exclude replication of HTTP sessions and stateful session beans

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -52,7 +52,13 @@
 	<parameter name="jbossInvokerLocatorPort">$((baseport+50))</parameter>
 
 	<parameter name="jnpPort">$((baseport+10))</parameter>
+
 	<parameter name="bindHost">127.0.0.1</parameter>
+	<!-- Multicast group for this cluster. 228.1.2.3 corresponds to the JBoss default,
+         but if you are picking one for yourself, AFAIK you should pick from
+         239.255.x.y, which is the "IPv4 Local Scope" -->
+	<parameter name="multicastAddress">228.1.2.3</parameter>
+
 	<parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$bindHost:$jnpPort</parameter> 
 	<parameter name="jbossLibs">$jbossdir/server/default/lib</parameter>
 
@@ -187,8 +193,9 @@
 		<parameter name="jrmiObjectPort">$((baseport+14))</parameter>
 		<parameter name="jinvokerPort">$((baseport+15))</parameter>
 		<parameter name="jbossOilInvocationLayerPort">$((baseport+16))</parameter>
-                <parameter name="hajndiPort">$((baseport+17))</parameter>
-                <parameter name="hajndiRmiPort">$((baseport+18))</parameter>
+        <parameter name="hajndiPort">$((baseport+17))</parameter>
+        <parameter name="hajndiRmiPort">$((baseport+18))</parameter>
+     	<parameter name="presenceMcastPort">$((baseport+19))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
