--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -51,15 +51,13 @@
 	<!-- note, default is 3873 -->
 	<parameter name="jbossInvokerLocatorPort">$((baseport+50))</parameter>
 
-	<parameter name="jnpPort">$((baseport+10))</parameter>
-
 	<parameter name="bindHost">127.0.0.1</parameter>
 	<!-- Multicast group for this cluster. 228.1.2.3 corresponds to the JBoss default,
          but if you are picking one for yourself, AFAIK you should pick from
          239.255.x.y, which is the "IPv4 Local Scope" -->
 	<parameter name="multicastAddress">228.1.2.3</parameter>
 
-	<parameter name="twiddle">JAVA_OPTS=-Dorg.jboss.logging.Logger.pluginClass=org.jboss.logging.NullLoggerPlugin $jbossdir/bin/twiddle.sh -s jnp://$bindHost:$jnpPort</parameter> 
+	<parameter name="twiddle">$basedir/jboss/scripts/twiddle.sh</parameter> 
 	<parameter name="jbossLibs">$jbossdir/server/default/lib</parameter>
 
 	<parameter name="basedir">$home/dhdeploy</parameter>
@@ -187,6 +185,7 @@
 		<parameter name="jbossClusterEnabled">no</parameter>
 		<parameter name="jbossPartition">default</parameter>
 
+		<parameter name="jnpPort">$((baseport+10))</parameter>
 		<parameter name="jrmpRmiPort">$((baseport+11))</parameter>
 		<parameter name="jdwpPort">$((baseport+12))</parameter>
 		<parameter name="jrmiPort">$((baseport+13))</parameter>	
