config.py expander.py: Allow service.property to stop having to move   everything up to the global scope. hajndi-jms-ds.xml cluster-service.xml base.conf: Parameterize the jnp discovery port imbot/files/conf/jndi.properties imbot/files/scripts/imbot-start.sh: Configure   imbot to find the cluster HA JNDI through autodiscovery.

--- a/dumbhippo/branches/cluster/super/base.conf
+++ b/dumbhippo/branches/cluster/super/base.conf
@@ -56,6 +56,8 @@
          but if you are picking one for yourself, AFAIK you should pick from
          239.255.x.y, which is the "IPv4 Local Scope" -->
 	<parameter name="multicastAddress">228.1.2.3</parameter>
+	<!-- Number of hops to keep outgoing packets alive for. 1 would be enough normally for a LAN -->
+	<parameter name="multicastTTL">2</parameter>
 
 	<parameter name="twiddle">$basedir/jboss/scripts/twiddle.sh</parameter> 
 	<parameter name="jbossLibs">$jbossdir/server/default/lib</parameter>
@@ -194,7 +196,8 @@
 		<parameter name="jbossOilInvocationLayerPort">$((baseport+16))</parameter>
         <parameter name="hajndiPort">$((baseport+17))</parameter>
         <parameter name="hajndiRmiPort">$((baseport+18))</parameter>
-     	<parameter name="presenceMcastPort">$((baseport+19))</parameter>
+     	<parameter name="presenceMcastPort">$((baseport+50))</parameter>
+     	<parameter name="jnpDiscoveryPort">$((baseport+51))</parameter>
 
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
