--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -22,6 +22,8 @@ mugshot_SOURCES	=				\
 	src/hippo-canvas-base.h			\
 	src/hippo-canvas-block.c		\
 	src/hippo-canvas-block.h		\
+	src/hippo-canvas-block-post.c		\
+	src/hippo-canvas-block-post.h		\
 	src/hippo-canvas-box.c			\
 	src/hippo-canvas-box.h			\
 	src/hippo-canvas-context.c		\
