create HippoActions object and punch it down into the block/stack canvas items so they can implement actions like opening urls. Implement clicking on post titles to go to the post.

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -10,6 +10,8 @@ mugshot_LDFLAGS=$(MUGSHOT_LIBS)
 mugshot_LDADD= libhippoipc.la libhippo.la libgtkcopy.la
 
 mugshot_SOURCES	=				\
+	src/hippo-actions.c			\
+	src/hippo-actions.h			\
 	src/hippo-bubble.c			\
 	src/hippo-bubble.h			\
 	src/hippo-bubble-manager.c		\
